# code-assist

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: contributing.md  index.md  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  mermaid-zoom.css
docs/api/: index.md  query-engine.md  tools.md
docs/guide/: agents.md  architecture.md  commands.md  configuration.md  getting-started.md  hooks.md  mcp.md  memory.md  permissions.md  skills.md  tasks.md  tools.md
src/claude_code/: __init__.py  __main__.py
src/claude_code/bridge/: bridge_config.py  bridge_messaging.py
src/claude_code/cli/: main.py
src/claude_code/commands/: __init__.py  clear.py  commit.py  compact.py  config_cmd.py  cost.py  diff.py  doctor.py  help.py  hooks_cmd.py  login.py  logout.py  mcp_cmd.py  memory_cmd.py  model.py  permissions_cmd.py  plan.py  registry.py  resume.py  review.py  session.py  status.py  tasks_cmd.py  theme.py  version.py  vim.py
src/claude_code/config/: claude_md.py  config.py  constants.py  settings.py
src/claude_code/constants/: product.py
src/claude_code/core/: query.py  query_engine.py  streaming.py
src/claude_code/git/: operations.py  worktree.py
src/claude_code/hooks_system/: hook_runner.py  post_sampling_hooks.py  session_hooks.py
src/code_assist/: __init__.py  __main__.py
tests/unit/: test_analytics.py  test_api_client.py  test_auth.py  test_commands.py  test_memory.py  test_permissions.py  test_query_engine.py  test_settings.py  test_store.py  test_tool_base.py  test_types.py
(+268 files in other folders)
