[project]
name = "claude-code-py"
version = "0.1.0"
description = "AI-powered coding assistant - Python implementation of Claude Code"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Abhinaav Ramesh" }]
readme = "README.md"
dependencies = [
    "anthropic>=0.50",
    "click>=8.1",
    "httpx>=0.28",
    "keyring>=25.0",
    "markdown-it-py>=3.0",
    "mcp>=1.0",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "prompt-toolkit>=3.0",
    "pydantic>=2.10",
    "rich>=14.0",
    "textual>=3.0",
    "tree-sitter>=0.24",
    "tree-sitter-bash>=0.23",
    "wcmatch>=10.0",
    "websockets>=14.0",
]

[project.scripts]
claude-code = "claude_code.cli.main:cli"

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
disallow_untyped_defs = true
packages = ["claude_code"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
